# sun_diffusion

./: .gitignore  CITATION.cff  README.md  __init__.py  analysis.py  linalg.py  pyproject.toml  run_tests.sh  sun.py  utils.py
deprecated/: heat.py
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sun_diffusion.action.html  sun_diffusion.canon.html  sun_diffusion.devices.html  sun_diffusion.diffusion.html  sun_diffusion.gens.html  sun_diffusion.heat.html  sun_diffusion.irreps.html  sun_diffusion.linalg.html  sun_diffusion.sun.html  sun_diffusion.utils.html
docs/_sources/: sun_diffusion.devices.rst.txt  sun_diffusion.sun.rst.txt
docs/source/: conf.py  index.rst  sun_diffusion.canon.rst  sun_diffusion.irreps.rst
docs_src/: conf.py  index.rst  sun_diffusion.action.rst  sun_diffusion.diffusion.rst  sun_diffusion.gens.rst  sun_diffusion.heat.rst  sun_diffusion.linalg.rst  sun_diffusion.utils.rst
final_notebooks/: toy_su2_spectral_diffusion.ipynb
notebooks/: analytical_hk_score_denoising.ipynb  euclidean_hk_denoising.ipynb  heat_kernel_score.ipynb  hk_jacobi_theta.nb  ident_su2_diffusion.ipynb  plot_su2_score.ipynb  plot_sun_hk_score.ipynb  su2_hk_denoising.ipynb  sun_pcm_2d.ipynb  toy_su2_coeff_diffusion.ipynb  toy_su2_spectral_diffusion.ipynb  toy_su3_spectral_diffusion.ipynb  training_hk_score_denoising.ipynb
notebooks/old_stuff/: HeatKernel_Score_octavio_v2.ipynb  SUN_Diffusions_Octavio_v2.ipynb
old_notebooks/: analytical_hk_score_denoising.ipynb  euclidean_hk_denoising.ipynb  ident_su2_diffusion.ipynb  plot_su2_score.ipynb  sun_pcm_2d.ipynb  toy_su2_coeff_diffusion.ipynb
old_notebooks/old_stuff/: HeatKernel_Score.ipynb  SUN_Diffusions_Octavio.ipynb  SUN_Diffusions_Tej_v3.ipynb  SUN_Diffusions_Tej_v4.ipynb
src/: __init__.py  __main__.py  action.py  canon.py  devices.py  diffusion.py  gens.py  heat.py  integrate.py  irreps.py  sun.py  utils.py
sun_diffusion/: canon.py  diffusion.py  gens.py  heat.py  integrate.py  irreps.py  linalg.py  sun.py  utils.py
