[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sun_diffusion"]

[project]
name = "sun_diffusion"
version = "0.1.0"
description = "Diffusion models for SU(N) degrees of freedom."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Gurtej Kanwar", email = "gurtejkanwar@gmail.com"},
    {name = "Octavio Vega", email = "vega00087@gmail.com"},
]
dependencies = [
    "numpy>=1.24,<2",
    "torch>=2.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
notebooks = [
    "matplotlib",
    "jupyter",
    "tqdm"
]
gpu = ["torch"]

[project.urls]
Repository = "https://github.com/ovega14/sun_diffusion"
Paper = "https://arxiv.org/abs/2512.xxxxx"
